force-app/main/default/objects/Nebula__LogEntryTagRule__mdt/fields/Nebula__ComparisonType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ComparisonType__c</fullName>
    <label>Comparison Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTAINS</fullName>
                <default>true</default>
                <label>CONTAINS</label>
            </value>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>MATCHES_REGEX</fullName>
            </value>
            <value>
                <fullName>STARTS_WITH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>