force-app/main/default/objects/Nebula__LogEntryTagRule__mdt/fields/Nebula__ComparisonValue__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ComparisonValue__c</fullName>
    <label>Comparison Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>