force-app/main/default/objects/Nebula__LogEntryTagRule__mdt/fields/Nebula__SObjectField__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SObjectField__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Nebula__LogEntryTagRule__mdt.Nebula__SObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Log Entry Tag Rules</relationshipLabel>
    <relationshipName>LogEntryTagRules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>