force-app/main/default/objects/Nebula__LogEntryTagRule__mdt/fields/Nebula__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__SObjectType__c</fullName>
    <label>Logger SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Log Entry Tag Rules</relationshipLabel>
    <relationshipName>LogEntryTagRules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>