force-app/main/default/objects/Nebula__LogEntryTagRule__mdt/listViews/Nebula__All.listView-meta.xml
<ListView>
    <fullName>Nebula__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Nebula__IsEnabled__c</columns>
    <columns>Nebula__SObjectType__c</columns>
    <columns>Nebula__SObjectField__c</columns>
    <columns>Nebula__ComparisonType__c</columns>
    <columns>Nebula__ComparisonValue__c</columns>
    <columns>Nebula__Tags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>